<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="name_hint">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_on_order">Quantity: <xliff:g id="quantity" example="12">%d</xliff:g></string>
    <string name="order_button">Order</string>
    <string name="email_subject">The order from <xliff:g id="customer_name" example="John Johnson">%s</xliff:g></string>
    <string name="name_on_order">Name: <xliff:g id="customer_name" example="John Johnson">%s</xliff:g></string>
    <string name="has_chocolate">Has chocolate: <xliff:g id="chocolate_or_not" example="true">%s</xliff:g></string>
</resources>
